--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "yourcuration",
   "version": "1.0.0",
@@ -8,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
