--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
+    "jimp": "^1.6.0",
     "node-fetch": "^3.3.2",
     "onnxruntime-node": "^1.21.1",
     "onnxruntime-web": "^1.21.0",
