fix error tag display

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "onnxruntime-node": "^1.21.1",
     "onnxruntime-web": "^1.21.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
