--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "onnxruntime-web": "^1.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
