--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
+    "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "onnxruntime-node": "^1.21.1",
